--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,15 @@
+###
+# Profile Configuration
+#  available profiles: batch
+###
+#spring.profiles.active=batch
+
 server.port=8080
 logging.level.root=info
 server.error.whitelabel.enabled=true
 
 # Hibernate
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 #spring.jpa.hibernate.naming-strategy=org.hibernate.cfg.DefaultNamingStrategy
 #spring.jpa.hibernate.ddl-auto=create
 spring.jpa.hibernate.ddl-auto=validate
@@ -11,3 +18,21 @@ spring.jpa.hibernate.ddl-auto=validate
 spring.datasource.url= jdbc:postgresql://localhost:5432/vmax
 spring.datasource.username=vmax
 spring.datasource.password=vmax
+
+###
+# Actuator Configuration
+###
+#endpoints.health.id=status
+#endpoints.health.sensitive=false
+#
+#endpoints.shutdown.enabled=true
+#endpoints.shutdown.sensitive=false
+#
+##management.context-path=/actuators
+#
+#info.app.name=Web Services
+#info.app.description=A RESTful web services project using Spring Boot.
+#info.build.group=@project.groupId@
+#info.build.artifact=@project.artifactId@
+#info.build.version=@project.version@
+spring.se
