--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,11 +11,11 @@ server.error.whitelabel.enabled=true
 # Hibernate
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 #spring.jpa.hibernate.naming-strategy=org.hibernate.cfg.DefaultNamingStrategy
-#spring.jpa.hibernate.ddl-auto=create
-spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.hibernate.ddl-auto=create
+#spring.jpa.hibernate.ddl-auto=validate
 
 # Initialization
-spring.datasource.url= jdbc:postgresql://localhost:5432/vmax
+spring.datasource.url= jdbc:postgresql://localhost:5432/app
 spring.datasource.username=vmax
 spring.datasource.password=vmax
 
