--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,6 +19,9 @@ spring.datasource.url= jdbc:postgresql://localhost:5432/vmax
 spring.datasource.username=vmax
 spring.datasource.password=vmax
 
+# RabbitMQ
+rabbit.input.queue=app-input-queue
+
 ###
 # Actuator Configuration
 ###
