--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,8 +11,8 @@ server.error.whitelabel.enabled=true
 # Hibernate
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 #spring.jpa.hibernate.naming-strategy=org.hibernate.cfg.DefaultNamingStrategy
-spring.jpa.hibernate.ddl-auto=create
-#spring.jpa.hibernate.ddl-auto=validate
+#spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=validate
 
 # Initialization
 spring.datasource.url= jdbc:postgresql://localhost:5432/app
@@ -21,6 +21,8 @@ spring.datasource.password=vmax
 
 # RabbitMQ
 rabbit.input.queue=app-input-queue
+spring.rabbitmq.listener.prefetch=10
+spring.rabbitmq.listener.acknowledge-mode=auto
 
 ###
 # Actuator Configuration
@@ -38,4 +40,3 @@ rabbit.input.queue=app-input-queue
 #info.build.group=@project.groupId@
 #info.build.artifact=@project.artifactId@
 #info.build.version=@project.version@
-spring.se
